# CG

./: Box.cpp  Box.h  CMakeLists.txt  Cone.cpp  Cone.h  Instructions.txt  Plane.cpp  Plane.h  README.md  Shape.cpp  Sphere.cpp  Sphere.h  Vertex.cpp  Vertex.h  cylinder.xml  engine.cpp  generator.cpp
files/: 4th.3d  4th.xml  85.3d  boneco_neve.xml  box.3d  box.xml  comet.xml  cone.3d  cylinder.3d  cylinder.xml  esfera.3d  meu.3d  plane.3d  plane.xml  sistemaSolar.xml  sphere.3d  sphere.xml  static_sistemaSolar.xml  teacup.3d  teacup.patch  teacup_and_teaspoon.xml  teapot.3d  teapotv2.3d  teaspoon.3d  teaspoon.patch  test_box.3d  test_cone.3d  test_sphere2.3d  teste.3d  teste.xml  teste4.3d  torus.3d  torus.xml  torus1.3d
src/: Box.cpp  Camera.cpp  Colour.cpp  Cone.cpp  Cylinder.cpp  Figures.cpp  Group.cpp  Light.cpp  Material.cpp  Operation.cpp  Parser.cpp  Patch.cpp  Plane.cpp  Point.cpp  Rotation.cpp  Scale.cpp  Shape.cpp  Sphere.cpp  Torus.cpp  Translation.cpp  Vertex.cpp  engine.cpp  gen  generator  generator.cpp  parsing_XML.cpp  teste  tinyxml2.cpp
src/headers/: Box.h  Camera.h  Colour.h  Cylinder.h  Figures.h  Group.h  Light.h  Material.h  Operation.h  Parser.h  Patch.h  Point.h  Rotation.h  Scale.h  Shape.h  Sphere.h  Torus.h  Translation.h  Vertex.h
src/testes/: erro.xml  meu_teste.xml  teste1.xml  teste2.xml  teste3.xml  teste4.xml  teste5.xml  teste6.xml  teste7.xml
